# magician

./: .gitignore  README.md  config.sample.toml  config.toml  draft.yml  pyproject.toml  settings.py  test.py
examples/: example.yml
src/magician/: __init__.py  init.py  settings.py
src/magician/cli/: cli.py
src/magician/commands/: base.py  shell.py  wrapper.py
src/magician/config/: __init__.py  interpreter.py  parser.py  reader.py  schema.py
src/magician/macros/: base.py  mapping.py
src/magician/macros/plugins/: create_pane.py
src/magician/macros/python/: activate_venv.py
src/magician/macros/shell/: goto_dir.py
src/magician/plugins/: base.py  kitty.py  tmux.py
src/magician/utils/: ensure_executable.py  open.py
tests/plugins/: conftest.py  test_plugins.py
